Fix bug that page can slide left on mobile browser

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -663,7 +663,7 @@ html[data-theme="dark"] {
 //  background-color:var(--ifm-navbar-background-color);
 //  box-shadow:var(--ifm-global-shadow-md);
 //  position:fixed;
-  transform:translate3d(100%,0,0);
+  transform:translate3d(-100%,0,0);
 //  transition-property:opacity,visibility,transform;
 //  width:var(--ifm-navbar-sidebar-width)
 }
